# infracheck

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/infracheck/: cli.py  explainer.py  models.py
src/infracheck/analyzers/: __init__.py  engine.py  fault_tolerance.py  observability.py  scalability.py  scoring.py  security.py
src/infracheck/output/: formatter.py
src/infracheck/parsers/: terraform.py
src/infracheck/rules/: fault_tolerance.py  observability.py  scalability.py  security.py
tests/: test_explainer.py  test_rules.py  test_terraform_parser.py
tests/analyzers/: test_engine.py  test_scoring.py
tests/fixtures/: main.tf
tests/rules/: test_fault_tolerance.py  test_observability.py  test_security.py
